// SPDX-FileCopyrightText: 2023 Katharina Fey <kookie@spacekookie.de>
//
// SPDX-License-Identifier: AGPL-3.0-or-later WITH LicenseRef-AppStore

syntax = "proto3";

// This file specifies the frame format used by connections between
// ratman routers.  A frame should be seen as equivalent to a packet
// on traditional networking channels, meaning that its size is capped
// to a maximum transfer size (MTU)
//
// For more details on the frame format, see the MREP specification

message Frame {
        uint64 modes = 1;
        bytes recipient = 2;
        bytes sender = 3;
        bytes seq_id = 4;
        bytes signature = 5;
        bytes payload = 7;
}

message AnnouncePayload {
        OriginData origin_data = 1;
        bytes origin_signature = 2;
        PeerData peer_data = 3;
        bytes peer_signature = 4;
        RouteData route_data = 5;
}

message OriginData {
        string timestamp = 1;
}

message PeerData {
        
}

message RouteData {
        uint32 mtu = 1;
        uint32 size_hint = 2;
}
